--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "method-override": "^3.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
