--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "auth",
   "version": "1.0.0",
   "description": "",
-  "main": "passport-config.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server",
+    "dev":"nodemon"
   },
   "author": "Marcel",
   "license": "ISC",
